--- a/humble_ws/src/error_handler/CMakeLists.txt
+++ b/humble_ws/src/error_handler/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(lidar_visualization)
+project(error_handler)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -9,16 +9,9 @@ endif()
 find_package(ament_cmake REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
-# find dependencies
+# find_package(<dependency> REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
-find_package(sensor_msgs REQUIRED)
-find_package(image_transport REQUIRED)
-find_package(cv_bridge REQUIRED)
-find_package(message_filters REQUIRED)
-find_package(OpenCV REQUIRED)
-
-include_directories(${OpenCV_INCLUDE_DIRS})
 
 include_directories(
   include
@@ -26,21 +19,24 @@ include_directories(
 )
 
 
-add_executable(lidarImagePublisher src/lidarImagePublisher.cpp 
-  src/Point2Image.cpp)
-  
-ament_target_dependencies(lidarImagePublisher 
-  rclcpp 
-  std_msgs 
-  sensor_msgs 
-  image_transport 
-  cv_bridge 
-  message_filters )
+add_executable(error_publisher src/error_publisher.cpp
+                src/ErrorHandler.cpp
+)
 
-target_link_libraries(lidarImagePublisher ${OpenCV_LIBRARIES})
+ament_target_dependencies(error_publisher 
+                rclcpp 
+                std_msgs 
+)
 
-install(TARGETS
-  lidarImagePublisher
+
+
+target_include_directories(error_publisher PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  $<INSTALL_INTERFACE:include>)
+
+target_compile_features(error_publisher PUBLIC c_std_99 cxx_std_17)  # Require C99 and C++17
+
+install(TARGETS error_publisher
   DESTINATION lib/${PROJECT_NAME})
 
 if(BUILD_TESTING)
@@ -54,6 +50,5 @@ if(BUILD_TESTING)
   set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
 endif()
-
 
 ament_package()
