--- a/humble_ws/src/obstacle_detection/package.xml
+++ b/humble_ws/src/obstacle_detection/package.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>sequence_controller</name>
+  <name>obstacle_detection</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="moro@todo.todo">moro</maintainer>
+  <maintainer email="magarmrinal@gmail.com">moro</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   <depend>rclcpp</depend>
   <depend>std_msgs</depend>
+  <depend>sensor_msgs</depend>
   <depend>geometry_msgs</depend>
-  
+
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
